--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
